refactor: 调整polaris-cleanup代码结构

--- a/polaris-cleanup.yaml
+++ b/polaris-cleanup.yaml
@@ -13,3 +13,6 @@ cleanup:
   deleteLimitedTime:
   deleteLimitedNum:
   batchDeleteNum:
+openJob:
+  - DeleteSoftDeleteInstance
+  - DeleteUnHealthyInstance
